<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/storyLayoutRoot"
app:cardCornerRadius="10dp"
android:elevation="4dp"
android:layout_margin="4dp"
android:layout_width="match_parent"
android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/story_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:transitionName="photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/contentDescIV" />

    <TextView
        android:id="@+id/tv_storyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="name"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/story_image"
        app:layout_constraintTop_toBottomOf="@+id/story_image"
        tools:text="@string/txt_judul" />

    <TextView
        android:id="@+id/tv_storyDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="5"
        android:transitionName="description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_storyTitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_storyTitle"
        tools:text="@string/txt_ini_deskripsi" />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>